refactor(vulnerabilities): update and enhance vulnerability handling across multiple languages
- Refactored vulnerability classes in C#, Java, PHP, Python, and Shell scripts to improve structure and maintainability.
- Introduced new functions for handling CORS, JWT processing, and user file management.
- Removed hardcoded credentials and improved session management practices.
- Enhanced logging for sensitive operations and added input validation to mitigate vulnerabilities.
- Updated existing functions to follow best practices for security, including better handling of user input and external resources.
- Consolidated vulnerability definitions and improved modularity for easier extension and maintenance.